fix link icon wrapping / homelink / crumbs in mobile header

--- a/src/assets/style/pages/content.css
+++ b/src/assets/style/pages/content.css
@@ -6,6 +6,9 @@
 
   @media (max-width: 1280px) {
     padding-bottom: 1rem;
+    width: 100%;
+    max-width: 100%;
+    grid-column: 1;
   }
 
   h1 {
@@ -150,6 +153,8 @@
 
   p {
     line-height: 1.65rem;
+    width: 100%;
+    overflow: hidden;
 
     &:not(:first-of-type) {
       padding-top: 0.5rem;
@@ -166,15 +171,19 @@
   }
 
   a {
+    display: inline;
     position: relative;
-    padding-right: 1.5ch;
     text-decoration: underline;
 
     &:after {
-      position: absolute;
-      right: 0;
       display: inline-block;
-      content: " ->";
+      content: "->";
+      padding-left: .4rem;
+      font-size: 1rem;
+
+      @media (max-width: 1280px) {
+        bottom: 0;
+      }
     }
   }
 
